<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#B1AEAE">

    <LinearLayout
        android:id="@+id/layout_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="#EF6C00"
        android:weightSum="2">

        <TextView
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textStyle="bold"
            android:text="@string/total"/>

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_total"
            android:textAlignment="center"
            android:textSize="25dp"
            android:textStyle="bold"/>
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_cart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_placeorder"
        android:layout_below="@+id/layout_total"
        tools:listitem="@layout/list_item_cart" />


    <Button
        android:id="@+id/btn_placeorder"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:background="#EF6C00"
        android:onClick="insertOrder"
        android:text="@string/btn_bill"
        android:textColor="@android:color/background_dark"
        android:textSize="24dp"/>


</RelativeLayout>